// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render correctly disabled button 1`] = `
<div>
  <Button
    ariaLabel=""
    className=""
    disabled={true}
    inheritedStyles=""
    onClick={[Function]}
    primary={false}
    secondary={false}
    type="button"
  >
    Submit(Disabled)
  </Button>
  <Image
    alt="Dummy Image"
    height="20px"
    onClick={[Function]}
    src="https://image.freepik.com/free-icon/information-circle_318-27255.jpg"
    width="20px"
  />
</div>
`;

exports[`<Tooltip /> should render correctly with clickable button 1`] = `
<div>
  <Button
    ariaLabel=""
    className=""
    disabled={false}
    inheritedStyles=""
    onClick={[Function]}
    primary={false}
    secondary={false}
    type="button"
  >
    Submit
  </Button>
  <Image
    alt="Dummy Image"
    height="20px"
    onClick={[Function]}
    src="https://image.freepik.com/free-icon/information-circle_318-27255.jpg"
    width="20px"
  />
</div>
`;

exports[`<Tooltip /> should render correctly with icon 1`] = `
<div>
  <Label
    className=""
  >
    Text message with Image Icon 
  </Label>
  <Image
    alt="Dummy Image"
    height="20px"
    onClick={[Function]}
    src="https://image.freepik.com/free-icon/information-circle_318-27255.jpg"
    width="20px"
  />
</div>
`;
